<resources>
    <string name="app_name">MotsTordus</string>
    <string name="btn_jouer">Jouer</string>
    <string name="btn_regles">Règles</string>
    <string name="txt_titreregles">LES RÈGLES DU JEU</string>
    <string name="txt_regles">IL FAUT BIEN REPONDRE AU QUIZ POUR DÉBLOQUER LA SUITE
\n
\n

\n SI TU AS ENTRE 0/10 ET 4/10 : DÉBLOQUE LE JEU : "RANGE TA BD !"
\n
        \n
\n SI TU AS ENTRE 5/10 ET 10/10 : DÉBLOQUE LES JEUX : "MÉMO-RIGOLO" \n ET "RANGE TA BD !"
\n

					\n BONNE CHANCE !</string>
    <string name="txt_choix">CHOISIS LE THEME DU QUIZ :</string>
    <string name="btn_manga">MANGA</string>
    <string name="btn_bd">BANDE DESSINÉE</string>
    <string name="btn_comics">COMICS</string>
    <string name="memorigolo">Mémo-Rigolo</string>
    <string name="btn_valider">Valider</string>
    <string name="Règles0">BIENVENUE DANS "RANGE TA BD"
        \n LE PRINCIPE EST SIMPLE, TU AURAS
        \n PLUSISEURS VIGNETTES DE BD
        \n QU IL FAUDRA RANGER
        \n DANS LE BON ORDRE.
    </string>
    <string name="Règles1">\n PLACE LA VIGNETTE UN
        \n DANS CETTE CASE EN LA GLISSANT
        \n A L AIDE DE TON DOIGT.

    </string>
    <string name="Règles2">\n  PLACE LA VIGNETTE DEUX
        \n DANS CETTE CASE EN LA GLISSANT
        \n A L AIDE DE TON DOIGT.

    </string>
    <string name="Règles3">\n  PLACE LA VIGNETTE TROIS
        \n DANS CETTE CASE EN LA GLISSANT
        \n A L AIDE DE TON DOIGT.

    </string>
    <string name="Règles4">\n PLACE LA VIGNETTE QUATRES
        \n DANS CETTE CASE EN LA GLISSANT
        \n A L AIDE DE TON DOIGT.

    </string>
    <string name="Règles5">\n QUAND TU PENSES AVOIR
        \n TOUTES LES IMAGES SUR LES
        \n BONS EMPLACEMENTS CLIC SUR
        \n LE BOUTON VALIDER

    </string>
    <string name="Règles6">\n \n TU AS DEUX VIES PAR NIVEAU


    </string>
    <string name="Règles7">\n
         SI LES PLACEMENTS NE SONT PAS
        \n TOTALEMENT BONS TU PERDS UNE VIE

    </string>
    <string name="Règles9">S IL Y A DES
        \n VIGNETTES A LA BONNE PLACE
        \n ELLES VONT S AFFICHER EN VERT

    </string>
    <string name="Règles8">\n SI TU PERDS UNE VIE
        \n LA TABLETTE TREMBLERA


    </string>
    <string name="Règles10">\n QUAND TU AS BON TU PEUX PASSER
        \n AU NIVEAU SUIVANT


    </string>
    <string name="Règles11"> \n \n PLACE AU JEU MAINTENANT !!
        \n


    </string>
    <string name="txt_rtbdexpl">Remets les vignettes de tes bandes dessinées préférées dans le bon ordre !</string>
    <string name="txt_mrexpl">Retrouve les paires des différents personnages de bande dessinées !</string>
    <string name="recommencer">RECOMMENCER LE QUIZ</string>
    <string name="btn_jouer_memo">Commencer</string>
    <string name="Accueil">ACCUEIL</string>
    <string name="quiz">LE QUIZ</string>
</resources>
